--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ header{
 	content: url(../images/mark.png);
 	margin: 0 10px 0 0;
 }
-.seting:before{
+.setting:before{
 	content: url(../images/seting.png);
 	margin: 0 10px 0 0;
 }
