--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,39 @@
+#menu {
+    float: left;
+    width: 700px;
+}
+ 
+#menu ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+ 
+#menu ul li {
+    padding: 0px;
+    margin: 0px;
+    display: inline;
+}
+ 
+#menu ul li a {
+    float: left;
+    display: block;
+    width: 130px;
+    height: 50px;
+    padding: 17px 10px 0 0;
+    margin: 0 30px 0 0 ;
+    font-size: 13px;
+    text-align: center;
+    text-decoration: none;
+    color: red;    
+    font-weight: bold;
+    outline: none;
+}
+ 
+#menu ul li a:hover, #menu ul li .active_menu {
+    color: #000;
+   
+}
 *{
 	margin: 0;
 	padding: 0;
@@ -101,6 +137,7 @@ header{
 	background-color: #ddd;
 	border-bottom: 2px solid #ddd;
 }
+
 .tab a.active {
   background-color: #ccc;
   border-bottom: 2px solid #5fc0e7;
@@ -246,6 +283,7 @@ a.active-items {
 	border-radius: 3px;
 	background-color: #ffffff;
 	flex-wrap: wrap;
+	margin-bottom: 50px;
 	padding: 25px 20px 0 20px;
 	display: flex;
 	justify-content: space-between;
